# SortFilterProxyModel

./: .gitignore  CMakeLists.txt  README.md  SortFilterProxyModel.pri  SortFilterProxyModel.qbs  SortFilterProxyModelConfig.cmake.in  filter.cpp  filter.h  proxyrole.cpp  proxyrole.h  qmldir  qpm.json  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  qqmlsortfilterproxymodel_plugin.cpp  qqmlsortfilterproxymodel_plugin.h  qqmlsortfilterproxymodelexport.h  qqmlsortfilterproxymodeltypes.cpp  qqmlsortfilterproxymodeltypes.h  qvariantlessthan.cpp  qvariantlessthan.h  sorter.cpp  sorter.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  sortfilterproxymodel.qbs  sortfilterproxymodel.qdocconf  sortfilterproxymodelplugin.cpp  sortfilterproxymodelplugin.h
.github/workflows/: cmake-qt5.yml  cmake-qt6.yml
cmake/: SortFilterProxyModelConfig.cmake.in
docs/: CMakeLists.txt  index.html  qml-allof-members.html  qml-allof.html  qml-anyof-members.html  qml-anyof.html  qml-expressionfilter-members.html  qml-expressionfilter.html  qml-expressionrole-members.html  qml-expressionrole.html  qml-expressionsorter-members.html  qml-expressionsorter.html  qml-filter-members.html  qml-filter.html  qml-filterrole-members.html  qml-filterrole.html  qml-filtersorter-members.html  qml-filtersorter.html  qml-indexfilter-members.html  qml-indexfilter.html  qml-joinrole-members.html  qml-joinrole.html  qml-proxyrole-members.html  qml-proxyrole.html  qml-rangefilter-members.html  qml-rangefilter.html  qml-regexpfilter-members.html  qml-regexpfilter.html  qml-regexprole-members.html  qml-regexprole.html  qml-rolefilter-members.html  qml-rolefilter.html  qml-rolesorter-members.html  qml-rolesorter.html  qml-singlerole-members.html  qml-singlerole.html  qml-sorter-members.html  qml-sorter.html  qml-sortfilterproxymodel-members.html  qml-sortfilterproxymodel.html  (+7 more)
docs/style/: CMakeLists.txt
filters/: alloffilter.cpp  anyoffilter.cpp  expressionfilter.cpp  expressionfilter.h  filter.cpp  filtercontainer.cpp  filtercontainer.h  filtersqmltypes.cpp  filtersqmltypes.h  indexfilter.cpp  indexfilter.h  rangefilter.cpp  regexpfilter.cpp  regexpfilter.h  rolefilter.cpp  valuefilter.cpp
module/: plugins.qmltypes  qmldir
private/: filter_p.h  sorter_p.h
proxyroles/: expressionrole.cpp  expressionrole.h  filterrole.cpp  joinrole.cpp  joinrole.h  proxyrole.cpp  proxyrole.h  proxyrolecontainer.cpp  proxyrolecontainer.h  proxyrolesqmltypes.cpp  proxyrolesqmltypes.h  regexprole.cpp  singlerole.cpp  switchrole.cpp  switchrole.h
sorters/: expressionsorter.cpp  expressionsorter.h  filtersorter.cpp  rolesorter.cpp  sorter.cpp  sorter.h  sortercontainer.cpp  sortercontainer.h  sortersqmltypes.cpp  sortersqmltypes.h  stringsorter.cpp
tests/: CMakeLists.txt  SortFilterProxyModel.pro  indexsorter.cpp  indexsorter.h  testroles.cpp  testroles.h  tst_delayed.qml  tst_helpers.qml  tst_indexfilter.qml  tst_proxyroles.qml  tst_rangefilter.qml  tst_regexprole.qml  tst_rolesorter.qml  tst_sortercontainerattached.qml  tst_sorters.qml  tst_sourceroles.qml  tst_stringsorter.qml  tst_switchrole.qml
utils/: utils.cpp
